tests/compile_fail/sealed_state_marker.rs
struct ExternalState;

impl batpak::typestate::StateMarker for ExternalState {}

fn main() {}
